# rust-quick-guide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  book.toml  rust-quick-guide-1.0.0.md
book/: rust-guideposts-book-1.0.0.md
doc/crates/arrow-csv/: index.md
doc/crates/assertables/: index.md
doc/crates/axum/: index.md
doc/crates/bevy/: index.md
doc/crates/cached/: index.md
doc/crates/cargo-cache/: index.md
doc/crates/cargo-crev/: index.md
doc/crates/cargo-dist/: index.md
doc/crates/cargo-make/: index.md
doc/crates/cargo-release/: index.md
doc/crates/clap/: index.md
doc/crates/console/: index.md
doc/crates/criterion/: index.md
doc/crates/crossbeam/: index.md
doc/crates/csv/: index.md
doc/crates/cursive/: index.md
doc/crates/diesel/: index.md
doc/crates/ed25519_dalek/: index.md
doc/crates/egui/: index.md
doc/crates/epoll/: index.md
doc/crates/flume/: index.md
doc/crates/gtk4/: index.md
doc/crates/hyper/: index.md
doc/crates/itertools/: index.md
doc/crates/log/: index.md
doc/crates/macroquad/: index.md
doc/crates/num/: index.md
doc/crates/once-cell/: index.md
doc/crates/parking-lot/: index.md
doc/crates/polars/: index.md
doc/crates/prost/: index.md
doc/crates/rand/: index.md
doc/crates/rayon/: index.md
doc/crates/regex/: index.md
doc/crates/reqwest/: index.md
doc/crates/rusqlite/: index.md
doc/crates/serde/: index.md
doc/crates/sqlx/: index.md
doc/crates/strum/: index.md
doc/crates/sycamore/: index.md
doc/crates/syn/: index.md
doc/crates/textwrap/: index.md
doc/crates/tokio/: index.md
doc/crates/tonic/: index.md
doc/crates/tui/: index.md
doc/crates/walkdir/: index.md
doc/crates/yew/: index.md
doc/topics/audience/: index.md
projects/crates/bevy/hello_world/: Cargo.toml  Cargo.toml~
projects/crates/clap/command_builder/: Cargo.toml  Cargo.toml~
projects/crates/clap/command_builder/src/: main.rs
projects/crates/clap/command_builder/tests/: integration_test.rs
projects/crates/sqlx/create_table_insert_into_select/: Cargo.toml
projects/crates/sqlx/create_table_insert_into_select/src/: main.rs
projects/crates/sqlx/create_table_insert_into_select/tests/: integration_test.rs
projects/crates/tonic/hello_world/: Cargo.toml  Cargo.toml~  build.rs
projects/crates/tonic/hello_world/src/: client.rs  server.rs
projects/crates/tonic/hello_world/tests/: integration_test.rs
src/: main.rs
todo/: tips.md  topics.md
(+443 files in other folders)
