[package]
name = "rust_summaries_bevy_hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "*"

# Compile Bevy with performance optimizations.
#
# While it may not be an issue for simple projects, debug builds in Rust can be
# very slow - especially when you start using Bevy to make real games.
#
# Sometimes debug builds, using the default configuration, can take multiple
# minutes to load large 3D models. And sometimes these builds drop the framerate
# for simple scenes to near-unplayable levels.
#
# Fortunately, there is a simple fix, and we don't have to give up our fast
# iterative compiles. Use the optimizations below.

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
