[package]
name = "rust_summaries_sqlx_create_table_insert_into_select_from"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "sqlite", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
